--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commonjs": "0.0.1",
     "leapjs": "^0.6.4"
+  },
+  "devDependencies": {
+    "typescript": "^2.2.2"
   }
 }
