--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "commonjs": "0.0.1",
-    "leapjs": "^0.6.4"
-  },
-  "devDependencies": {
+    "leapjs": "^0.6.4",
     "typescript": "^2.2.2"
   }
 }
